Computational domain now is (0.0, 0.0, 0.0) + 1.0 (square of unite edge, anchored in the origin).

--- a/python_wrapper/phd_thesis/config/PABLO.ini
+++ b/python_wrapper/phd_thesis/config/PABLO.ini
@@ -1,6 +1,6 @@
 [PABLO]
 NumberOfGrids = 2
-Edges = 1, 0.25
+#Edges = 1, 0.25, 0.5
 # OK
 #GridPoints = 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0; 0.25, 0.25, 0, 0.75, 0.25, 0, 0.75, 0.5, 0, 0.25, 0.5, 0 
 # OK
