Added a case with two grids

--- a/python_wrapper/phd_thesis/config/PABLO.ini
+++ b/python_wrapper/phd_thesis/config/PABLO.ini
@@ -1,7 +1,8 @@
 [PABLO]
 NumberOfGrids = 1
+#GridPoints = 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0; 0.375, 0.375, 0, 0.625, 0.375, 0, 0.625, 0.625, 0, 0.375, 0.625, 0
 GridPoints = 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0
-Refinements = 10
+Refinements = 2
 [PROBLEM]
 Dimension = 2
 Log = False
