--- a/python_wrapper/phd_thesis/config/PABLO.ini
+++ b/python_wrapper/phd_thesis/config/PABLO.ini
@@ -1,11 +1,11 @@
 [PABLO]
-NumberOfGrids = 1
+NumberOfGrids = 2
 #GridPoints = 2, 0, 0, 4, 2, 0, -2, 4, 0, -4, 2, 0
 #GridPoints = 2, 0, 0, 4, 0, 0, 6, 4, 0, 4, 4, 0
 #GridPoints = 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0
 #GridPoints = 2, 0, 0, 4, 0, 0, 6, 4, 0, 2, 4, 0
-GridPoints = 2, 0, 0, 4, 0, 0, 6, 6, 0, 2, 4, 0
-Refinements = 9
+GridPoints = 2, 0, 0, 4, 0, 0, 6, 6, 0, 2, 4, 0; 3, 1, 0, 4, 1, 0, 4, 2, 0, 3, 2, 0
+Refinements = 3, 3
 [PROBLEM]
 Dimension = 2
 Log = False
