--- a/python_wrapper/phd_thesis/config/PABLO.ini
+++ b/python_wrapper/phd_thesis/config/PABLO.ini
@@ -1,12 +1,12 @@
 [PABLO]
-NumberOfGrids = 3
+NumberOfGrids = 2
 #GridPoints = 2, 0, 0, 4, 2, 0, -2, 4, 0, -4, 2, 0
 #GridPoints = 2, 0, 0, 4, 0, 0, 6, 4, 0, 4, 4, 0
 #GridPoints = 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0
 #GridPoints = 2, 0, 0, 4, 0, 0, 6, 4, 0, 2, 4, 0
-#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 2, 2, 0, 3, 2, 0, 3, 3, 0, 2, 3, 0
-GridPoints = 0, 0, 0, 2.5, 0, 0, 4, 4, 0, 1.5, 4, 0; 1, 1, 0, 2.5, 1, 0, 2.5, 2, 0, 1, 2, 0; 1.5, 2.5, 0, 3, 2.5, 0, 3.5, 3.5, 0, 1.5, 3, 0
-Refinements = 6, 6, 6
+GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 2, 2, 0, 3, 2, 0, 3, 3, 0, 2, 3, 0
+#GridPoints = 0, 0, 0, 2.5, 0, 0, 4, 4, 0, 1.5, 4, 0; 1, 1, 0, 2.5, 1, 0, 2.5, 2, 0, 1, 2, 0; 1.5, 2.5, 0, 3, 2.5, 0, 3.5, 3.5, 0, 1.5, 3, 0
+Refinements = 9, 9
 [PROBLEM]
 Dimension = 2
 Log = False
