--- a/python_wrapper/phd_thesis/config/PABLO.ini
+++ b/python_wrapper/phd_thesis/config/PABLO.ini
@@ -1,5 +1,5 @@
 [PABLO]
-NumberOfGrids = 3
+NumberOfGrids = 2
 #GridPoints = 2, 0, 0, 4, 2, 0, -2, 4, 0, -4, 2, 0
 #GridPoints = 2, 0, 0, 4, 0, 0, 6, 4, 0, 4, 4, 0
 #GridPoints = 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0
@@ -8,11 +8,12 @@ NumberOfGrids = 3
 #GridPoints = 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0; 0.25, 0.25, 0, 0.75, 0.25, 0, 0.75, 0.75, 0, 0.25, 0.75, 0
 #GridPoints = 0, 0, 0, 2, 0, 0, 2, 2, 0, 0, 2, 0; 0.25, 0.25, 0, 0.75, 0.25, 0, 0.75, 0.75, 0, 0.25, 0.75, 0; 1.0, 1.0, 0, 1.5, 1.0, 0, 1.5, 1.5, 0, 1.0, 1.5, 0
 #GridPoints = 0, 0, 0, 2.5, 0, 0, 4, 4, 0, 1.5, 4, 0; 1, 1, 0, 2.5, 1, 0, 2.5, 2, 0, 1, 2, 0; 1.5, 2.5, 0, 3, 2.5, 0, 3.5, 3.5, 0, 1.5, 3, 0
-#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.5, 1.5, 0, 2.5, 2, 0, 3, 3, 0, 1.5, 2, 0
+GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.5, 1.5, 0, 2.5, 2, 0, 3, 3, 0, 1.5, 2, 0
 #Refinements = 5, 4
-GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.5, 2, 0, 3, 2, 0, 3, 3.5, 0, 0.5, 3.5, 0; 2, 0.5, 0, 3, 0.5, 0, 3, 1.5, 0, 2, 1.5, 0
+#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.5, 2, 0, 3, 2, 0, 3, 3.5, 0, 0.5, 3.5, 0; 2, 0.5, 0, 3, 0.5, 0, 3, 1.5, 0, 2, 1.5, 0
+#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.40, 1.8, 0, 2.90, 1.8, 0, 2.90, 3.45, 0, 0.40, 3.45, 0; 1.6, 0.6, 0, 2.6, 0.6, 0, 2.6, 1.6, 0, 1.6, 1.6, 0
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.5, 2.5, 0, 3, 2.5, 0, 3, 3.5, 0, 0.5, 3.5, 0; 2, 0.5, 0, 3, 0.5, 0, 3, 1.5, 0, 2, 1.5, 0
-Refinements = 8, 9, 9
+Refinements = 4, 4
 [PROBLEM]
 Dimension = 2
 Log = False
