Corrected CMakeLists.txt.
Now we have built lapack using shared libraries (needed py PETSc);

Remember, before building lapack, to install ccmake so graphically we can
set shared_libraries ON (without using -DBUILD_SHARED_LIBS=ON ), and also
the installation of CBLAS and LAPACKE (this one, needed by bitpit).

As the previous time, remember, to build bitpit, to export CPATH
(in my case, equal to /usr/local/lib/lapack-3.7.0/include/), needed for the
file lapacke.h.

For PETSc and petsc4py, we have used the standard version, not the developers'
one. This last one, in fact, gave use some problem installing petsc4py
via pip (in every manner...). After the installation of the standard version,
and after have setted in .bashrc the following values:

export PETSC_DIR=/usr/local/lib/petsc-3.7.6
export PETSC_ARCH=""

we have succeded in installing petsc4py via pip without problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -411,11 +411,11 @@ set(BITPIT_EXTERNAL_DEPENDENCIES "")
 isModuleEnabled("CG" MODULE_CG_ENABLED)
 isModuleEnabled("RBF" MODULE_RBF_ENABLED)
 if (MODULE_CG_ENABLED OR MODULE_RBF_ENABLED)
-	set(BLA_STATIC TRUE)
-	#set(LAPACK_DIR /usr/local/lib/lapack-3.6.1)
-	set(LAPACK_LIBRARIES /usr/local/lib/lapack-3.6.1/liblapacke.a /usr/local/lib/lapack-3.6.1/liblapack.a /usr/local/lib/lapack-3.6.1/librefblas.a)
-	#find_package(BLAS REQUIRED)
-	#find_package(LAPACK REQUIRED)
+	#set(BLA_STATIC TRUE)
+	#set(LAPACK_DIR /usr/local/lib/lapack-3.7.0/lib/)
+	#set(LAPACK_LIBRARIES /usr/local/lib/lapack-3.6.1/liblapacke.a /usr/local/lib/lapack-3.6.1/liblapack.a /usr/local/lib/lapack-3.6.1/librefblas.a)
+	find_package(BLAS REQUIRED)
+	find_package(LAPACK REQUIRED)
 
 	if(LAPACK_FOUND)
   		message("Found Lapack")
