--- a/python_wrapper/phd_thesis/config/PABLO.ini
+++ b/python_wrapper/phd_thesis/config/PABLO.ini
@@ -11,12 +11,13 @@ NumberOfGrids = 2
 #GridPoints = 1.5, 1.5, 0, 2.5, 2, 0, 3, 3, 0, 1.5, 2, 0
 #GridPoints = 1.5, 1.5, 0, 2.5, 1.5, 0, 3, 3, 0, 2, 3, 0
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.5, 1.5, 0, 2.5, 2, 0, 3, 3, 0, 1.5, 2, 0
-GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.5, 1.5, 0, 2.5, 1.5, 0, 3, 3, 0, 2, 3, 0
+GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.7, 1.5, 0, 2.5, 2, 0, 3, 3, 0, 1.7, 2.7, 0
+#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.5, 1.5, 0, 2.5, 1.5, 0, 3, 3, 0, 2, 3, 0
 #Refinements = 5, 4
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.5, 2, 0, 3, 2, 0, 3, 3.5, 0, 0.5, 3.5, 0; 2, 0.5, 0, 3, 0.5, 0, 3, 1.5, 0, 2, 1.5, 0
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.40, 1.8, 0, 2.90, 1.8, 0, 2.90, 3.45, 0, 0.40, 3.45, 0; 1.6, 0.6, 0, 2.6, 0.6, 0, 2.6, 1.6, 0, 1.6, 1.6, 0
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.5, 2.5, 0, 3, 2.5, 0, 3, 3.5, 0, 0.5, 3.5, 0; 2, 0.5, 0, 3, 0.5, 0, 3, 1.5, 0, 2, 1.5, 0
-Refinements = 4, 4
+Refinements = 8, 8
 [PROBLEM]
 Dimension = 2
 Log = False
