--- a/python_wrapper/phd_thesis/config/PABLO.ini
+++ b/python_wrapper/phd_thesis/config/PABLO.ini
@@ -11,6 +11,7 @@ NumberOfGrids = 2
 #GridPoints = 1.5, 1.5, 0, 2.5, 2, 0, 3, 3, 0, 1.5, 2, 0
 #GridPoints = 1.5, 1.5, 0, 2.5, 1.5, 0, 3, 3, 0, 2, 3, 0
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.5, 1.5, 0, 2.5, 2, 0, 3, 3, 0, 1.5, 2, 0
+#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.8, 1.6, 0, 2.2, 1.8, 0, 2.8, 2.8, 0, 1.7, 2.7, 0
 GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.7, 1.5, 0, 2.5, 2, 0, 3, 3, 0, 1.7, 2.7, 0
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1.5, 1.5, 0, 2.5, 1.5, 0, 3, 3, 0, 2, 3, 0
 #Refinements = 5, 4
