--- a/python_wrapper/phd_thesis/config/PABLO.ini
+++ b/python_wrapper/phd_thesis/config/PABLO.ini
@@ -17,6 +17,10 @@ NumberOfGrids = 2
 #Refinements = 5, 4
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.5, 2, 0, 3, 2, 0, 3, 3.5, 0, 0.5, 3.5, 0; 2, 0.5, 0, 3, 0.5, 0, 3, 1.5, 0, 2, 1.5, 0
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1, 2, 0, 2, 1, 0, 3, 2, 0, 2, 3, 0
+#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.9, 2, 0, 2, 1.1, 0, 3.1, 2, 0, 2, 2.9, 0
+#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.95, 2, 0, 2, 1.05, 0, 3.05, 2, 0, 2, 2.95, 0
+#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.975, 2, 0, 2, 1.025, 0, 3.025, 2, 0, 2, 2.975, 0
+#GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 1, 1, 0, 2.414, 1, 0, 3.414, 2, 0, 2, 2, 0
 #OK
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 2, 1, 0, 3.3927, 1.2456, 0, 3.1472, 2.6383, 0, 1.7544, 2.3925, 0
 #GridPoints = 0, 0, 0, 4, 0, 0, 4, 4, 0, 0, 4, 0; 0.6073, 0.7544, 0, 3.3927, 1.2456, 0, 3.1472, 2.6383, 0, 0.3618, 2.1471, 0
